# sound-effects

./: .gitignore  README.md
drone/: drone_usage.rs  example_drone_usage.rs  sounds.rs
drone_proposal/enri/handle_command proposal/: main.rs
drone_proposal/nita/: cargo.toml  drone.rs  drone_usage_example.rs  drone_with_flood_errors.rs  drone_with_sound.rs  testing_rodio.rs
drone_proposal/pat/: Cargo.toml
drone_proposal/pat/Drone/: Cargo.toml
drone_proposal/pat/Drone/modules/: drone.rs  (+2 more)
drone_proposal/pat/drone/: Cargo.toml
drone_proposal/pie/: Cargo.toml
drone_proposal/pie/src/: config.rs  controller.rs  drone.rs  main.rs  network.rs  packet.rs
drone_versions/amongus_drone/: Cargo.toml
drone_versions/amongus_drone/src/: drone_test.rs  lib.rs  sounds.rs
drone_versions/no_sound_drone/: Cargo.toml
drone_versions/no_sound_drone/src/: drone_test.rs  lib.rs
drone_versions/quack_drone/: Cargo.toml
drone_versions/quack_drone/src/: drone_test.rs  lib.rs  sounds.rs
drone_versions/supermario_drone/: Cargo.toml
drone_versions/supermario_drone/src/: drone_test.rs  lib.rs  sounds.rs
drone_versions/windowsXP_drone/: Cargo.toml
drone_versions/windowsXP_drone/src/: drone_test.rs  lib.rs  sounds.rs
drones_version/: Cargo.toml
drones_version/amongus_drone/: README.md
drones_version/amongus_drone/modules/: drone.rs  sounds.rs  tests.rs
drones_version/modules/: drone.rs  sounds.rs  tests.rs
drones_version/no_sound_drone/: README.md
drones_version/no_sound_drone/modules/: drone.rs  tests.rs
drones_version/quack_drone/: README.md
drones_version/quack_drone/modules/: drone.rs  sounds.rs  tests.rs
drones_version/supermario_drone/: Cargo.toml  README.md
drones_version/windows_drone/: Cargo.toml  README.md
drones_version/windows_drone/modules/: drone.rs  sounds.rs  tests.rs
(+6 files in other folders)
