[package]
name = "Drone"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" , feature = ["debug", "serialize", "derive"] }
rand = "0.9.0-beta.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rodio = "0.20.1"
reqwest = { version = "0.12.9", features = ["blocking"] }

[dev-dependencies]
toml = "0.8.19"
crossbeam-channel = "0.5.13"

[features]
serialize = ["wg_2024/serialize"]
debug = ["wg_2024/debug"]


[[example]]
name = "drone"
path = "modules/drone.rs"
feature = ["serialize", "debug", "derive"]






